--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: OpenStats
 Type: Package
 Title: A Robust and Scalable Software Package for Reproducible Analysis of High-Throughput Phenotypic Data
-Version: 1.0.1
+Version: 0.99.2
 Author: Hamed Haseli Mashhadi
 Maintainer: Hamed Haseli Mashhadi <hamedhm@ebi.ac.uk>
 Description: Package contains several methods for statistical analysis of phenotype to genotype association.
@@ -12,9 +12,9 @@ LazyData: true
 Repository: CRAN
 RoxygenNote: 6.0.1
 Depends: R (>= 3.6.0.0)
-Suggests: rmarkdown
 BugReports: https://git.io/Jv5wg
 URL: https://git.io/Jv5w0
 biocViews: StatisticalMethod, BatchEffect, Bayesian 
 Date: 2020-03-31
+Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
