--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: OpenStats
 Type: Package
 Title: A Robust and Scalable Software Package for Reproducible Analysis of High-Throughput Phenotypic Data
-Version: 0.99.2
+Version: 0.99.3
 Author: Hamed Haseli Mashhadi
 Maintainer: Hamed Haseli Mashhadi <hamedhm@ebi.ac.uk>
 Description: Package contains several methods for statistical analysis of phenotype to genotype association.
@@ -16,5 +16,5 @@ BugReports: https://git.io/Jv5wg
 URL: https://git.io/Jv5w0
 biocViews: StatisticalMethod, BatchEffect, Bayesian 
 Date: 2020-03-31
-Suggests: knitr, rmarkdown
+Suggests: rmarkdown
 VignetteBuilder: knitr
