--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: OpenStats
 Type: Package
 Title: A Robust and Scalable Software Package for Reproducible Analysis of High-Throughput genotype-phenotype association
-Version: 1.1.4
+Version: 1.6.4
 Author: Hamed Haseli Mashhadi
 Maintainer: Hamed Haseli Mashhadi <hamedhm@ebi.ac.uk>
 Description: Package contains several methods for statistical analysis of genotype to phenotype association in high-throughput screening pipelines.
@@ -9,6 +9,7 @@ License: GPL (>= 2)
 Imports: MASS, jsonlite, Hmisc, methods, knitr, AICcmodavg, car, rlist, summarytools, graphics, stats, utils
 Depends: nlme
 Encoding: UTF-8
+RoxygenNote: 6.0.1
 BugReports: https://git.io/Jv5wg
 URL: https://git.io/Jv5w0
 biocViews: StatisticalMethod, BatchEffect, Bayesian 
